:bug: fix anchor link targets
no longer affects text selection above category names, uses invisible span tag for link href id instead of the title

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,7 +5,7 @@
 
 // this causes text right above the anchor tag to 
 // be not selectable
-.bd-anchor-title {
+.bd-anchor-target {
   padding-top: 80px;
   margin-top: -80px;
 }
